--- a/turkey_trot/index.html
+++ b/turkey_trot/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script src="vehicle.js"></script>
+    <script src="Runner.js"></script>
     <script src="sketch.js"></script>
 </body>
 
