repalce video with gif

--- a/marathon_journey/index.html
+++ b/marathon_journey/index.html
@@ -14,7 +14,7 @@
             margin: 0;
         }
 
-        #video-player {
+        img {
             width: 80vw;
             height: 80vh;
         }
@@ -22,10 +22,7 @@
 </head>
 
 <body>
-    <video id="video-player" controls>
-        <source src="demo.mov" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+    <img src="demo.gif" alt="My Marathon Journey">
 </body>
 
 </html>
